Fixing inputs alignment.

--- a/src/pages/standard.css
+++ b/src/pages/standard.css
@@ -379,3 +379,18 @@
 .flip-vertical {
     transform: scaleY(-1);
   }
+
+  /* Hide arrows */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type="number"] {
+  -moz-appearance: textfield; /* Firefox */
+  text-align: right;
+}
+
+.dateInput {
+    text-align: left;
+}
